♻️ refactor(JWT): In the class JwtAuthenticationConverter