@@ -1,5 +1,6 @@
 package com.backend.s21.security.jwt;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
@@ -10,12 +11,11 @@ import org.springframework.security.oauth2.jwt.JwtClaimNames;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 
-import java.util.Collection;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@Slf4j
 public class JwtAuthenticationConverter
         implements Converter<Jwt, AbstractAuthenticationToken> {
 
@@ -33,9 +33,10 @@ public class JwtAuthenticationConverter
     @Override
     public AbstractAuthenticationToken convert(Jwt jwt) {
         Collection<GrantedAuthority> authorities =
-                Stream.concat(authoritiesConverter
-                                .convert(jwt).stream(),
-                        extractRoles(jwt).stream()).toList();
+                Stream.concat(
+                        authoritiesConverter.convert(jwt).stream(),
+                        extractRoles(jwt).stream())
+                        .toList();
 
         return new JwtAuthenticationToken(jwt, authorities, getName(jwt));
     }
@@ -50,14 +51,30 @@ public class JwtAuthenticationConverter
 
     private Collection<? extends GrantedAuthority> extractRoles(Jwt source) {
         Map<String, Object> resourceAccess = source.getClaim("resource_access");
-        Map<String, Object> resource = (resourceAccess != null) ? (Map<String, Object>) resourceAccess.get(idResource) : null;
-        Collection<String> roles = (resource != null) ? (Collection<String>) resource.get("roles") : null;
-        if (resourceAccess == null || resource == null || roles == null) {
-            return Set.of();
+        if (resourceAccess == null) {
+            return Collections.emptySet();
         }
+
+        Object resourceObj = resourceAccess.get(idResource);
+        if (!(resourceObj instanceof Map)) {
+            return Collections.emptySet();
+        }
+
+        Map<String, Object> resource = (Map<String, Object>) resourceObj;
+        Object rolesObj = resource.get("roles");
+        if (!(rolesObj instanceof Collection)) {
+            return Collections.emptySet();
+        }
+        Collection<String> roles = (Collection<String>) rolesObj;
         return roles.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .filter(Objects::nonNull)
+                .map(this::formatRole)
                 .collect(Collectors.toSet());
+    }
+
+    private GrantedAuthority formatRole(String role) {
+        String formattedRole = role.startsWith("ROLE_") ? role : "ROLE_" + role;
+        return new SimpleGrantedAuthority(formattedRole);
     }
 
 }
